# DicomViewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.codex/skills/dicomviewer-diagnostics/: SKILL.md
.codex/skills/dicomviewer-diagnostics/agents/: openai.yaml
docs/: clipping-interaction-memory.md  crash-diagnostics.md  diagnostics-integration-log.md
src/core/: casepackagereader.cpp  casepackagereader.h  studyloader.cpp  studyloader.h
src/core/runtime/: crashhandler.cpp  crashhandler.h  studyloadfeedback.h  studyloadresult.h
src/model/: studyloadresult.h  studypackage.h
src/view/: fourpanecontentwidget.cpp  fourpanecontentwidget.h  fourpaneviewer.cpp  fourpaneviewer.h  modelclippingcontroller.cpp  modelclippingcontroller.h  modelrulercontroller.cpp  modelrulercontroller.h  modelviewcameracontroller.cpp  modelviewcameracontroller.h  modelviewcrosshaircontroller.cpp  modelviewcrosshaircontroller.h  modelviewwidget.cpp  modelviewwidget.h  mprcrosshaircontroller.cpp  mprcrosshaircontroller.h  mprrulercontroller.cpp  mprrulercontroller.h  mprslicemath.cpp  mprslicemath.h  mprviewwidget.cpp  mprviewwidget.h  mprwindowlevelcontroller.cpp  mprwindowlevelcontroller.h  scenesidebarwidget.cpp  scenesidebarwidget.h  splittergridwidget.cpp  splittergridwidget.h  viewerstatewidget.cpp  viewerstatewidget.h  viewportpanel.cpp  viewportpanel.h
tests/: logic_tests.cpp
tools/: dicom_to_obj.cpp  dicom_to_stl.cpp
